# src/app/models/user.model.ts
@@ -1,46 +1,60 @@
 import mongoose from "mongoose";
-import bcrypt from 'bcrypt';
+import bcrypt from "bcrypt";
 import config from "config";
 
 export interface UserInput {
-    email: string;
-    name: string;
-    password: string;
-};
+  email: string;
+  phnNo: string;
+  username: string;
+  password: string;
+  ownGender: string;
+  findGender: string;
+  isVerify: boolean;
+  verificationCode: string;
+  verifyTimeLimit: string;
+  isRemember: boolean;
+}
 
 export interface UserDocument extends UserInput, mongoose.Document {
-    createdAt: Date;
-    updatedAt: Date;
-    comparePassword(candidatePassword: string): Promise<Boolean>;
-};
+  createdAt: Date;
+  updatedAt: Date;
+  comparePassword(candidatePassword: string): Promise<Boolean>;
+}
 
 const userSchema = new mongoose.Schema(
-    {
-        email: { type: String, required: true, unique: true },
-        name: { type: String, required: true },
-        password: { type: String, required: true },
-    },
-    {
-        timestamps: true,
-        strict: true,
-    }
+  {
+    phnNo: { type: String, unique: true },
+    email: { type: String },
+    username: { type: String },
+    password: { type: String, required: true },
+    ownGender: { type: String, required: true },
+    findGender: { type: String, required: true },
+    isVerify: { type: Boolean, required: true, default: false },
+    verificationCode: { type: Number, default: 123456 },
+    isRemember: { type: Boolean, required: true, default: false },
+    verifyTimeLimit: { type: Number, required: true, default: 60 },
+  },
+  {
+    timestamps: true,
+    strict: true,
+  }
 );
 
 userSchema.pre("save", async function (next) {
-    let user = this as UserDocument;
+  let user = this as unknown as UserDocument;
+  if (!user.isModified("password")) return next();
+  const salt = await bcrypt.genSalt(config.get<number>("saltWorkFactor"));
+  const hash = bcrypt.hashSync(user.password, salt);
+  user.password = hash;
 
-    if (!user.isModified("password")) return next();
-    // let saltWorkFactor:number = parseInt(process.env.saltWorkFactor);
-    const salt = await bcrypt.genSalt(config.get<number>("saltWorkFactor"));
-    const hash = bcrypt.hashSync(user.password, salt);
-    user.password = hash;
-
-    return next();
+  return next();
 });
 
-userSchema.methods.comparePassword = async function ( candidatePassword: string): Promise<boolean> {
-    const user = this as UserDocument;
-    return bcrypt.compare(candidatePassword, user.password).catch((e) => false);
+userSchema.methods.comparePassword = async function (
+  candidatePassword: string
+): Promise<boolean> {
+  const user = this as UserDocument;
+  return bcrypt.compare(candidatePassword, user.password).catch((e) => false);
 };
 
 const UserModel = mongoose.model<UserDocument>("User", userSchema);
